// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/cornerstone/item-employee should render correctly 1`] = `
<li
  className="m-cornerstone__item"
  itemProp="itemListElement"
  itemScope={true}
  itemType="https://schema.org/EmployeeRole"
>
  <div
    className="m-cornerstone__description"
  >
    <div
      className="m-cornerstone__description-content"
    >
      <h4
        className="is-centered c-type--h4 m-cornerstone__headline"
        itemProp="roleName"
      >
        Headline item employee
      </h4>
      <p
        className="c-type--p m-cornerstone__company"
      >
        <strong>
          Lead  item employee
        </strong>
      </p>
      <p
        className="c-type--p m-cornerstone__time"
        itemProp="description"
      >
        (
        <time
          className="c-time"
          itemProp="startDate"
        >
          20161212
        </time>
         
        - 
        <time
          className="c-time"
        >
          20161224
        </time>
        )
      </p>
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item employee 1",
          }
        }
        itemProp="description"
      />
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item employee 2",
          }
        }
        itemProp="description"
      />
    </div>
  </div>
  <div
    className="m-cornerstone__bubble"
  />
</li>
`;

exports[`common/component/module/cornerstone/item-employee should render cssModifier and offset if passed 1`] = `
<li
  className="m-cornerstone__item--employee has-offset--200"
  itemProp="itemListElement"
  itemScope={true}
  itemType="https://schema.org/EmployeeRole"
>
  <div
    className="m-cornerstone__description"
  >
    <div
      className="m-cornerstone__description-content"
    >
      <h4
        className="is-centered c-type--h4 m-cornerstone__headline"
        itemProp="roleName"
      >
        Headline item employee
      </h4>
      <p
        className="c-type--p m-cornerstone__company"
      >
        <strong>
          Lead  item employee
        </strong>
      </p>
      <p
        className="c-type--p m-cornerstone__time"
        itemProp="description"
      >
        (
        <time
          className="c-time"
          itemProp="startDate"
        >
          20161212
        </time>
         
        - 
        <time
          className="c-time"
        >
          20161224
        </time>
        )
      </p>
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item employee 1",
          }
        }
        itemProp="description"
      />
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item employee 2",
          }
        }
        itemProp="description"
      />
    </div>
  </div>
  <div
    className="m-cornerstone__bubble"
  />
</li>
`;
